--- a/doc/01.1-Howto-github-branches.md
+++ b/doc/01.1-Howto-github-branches.md
@@ -1,7 +1,7 @@
 # 01.1-Howto-github-branches
 
 The git version control system has a feature called *branches* that make it safe and easy to implement bug fixes or new features, and to isolate those changes from the main development environment until they are vetted.
-The concept of branches is not unique to git: users of Subversion or CVS will recognize the common organizational strategy of placing the main development environment in a `trunk/` directory, and then creating experimental branches by copying that directory to a separate `branches/` directory.
+The concept of branches is not unique to git: users of Subversion or version control systems (VCS) will recognize the common organizational strategy of placing the main development environment in a `trunk/` directory, and then creating experimental branches by copying that directory to a separate `branches/` directory.
 Indeed, with Subversion, branching is just that—a strategy—and merging branches back into the main trunk can be very tedious and frustrating.
 With git, however, branches are a built-in feature: they are trivial to create, and can almost always be merged back into the main line of development (*master*) with little or no hassle.
 
